# Crossy_Road_Haskell

./: 2022li1g022.cabal  README.md
src/: Main.hs  Tarefa1_2022li1g022.hs  Tarefa2_2022li1g022.hs  Tarefa3_2022li1g022.hs  Tarefa4_2022li1g022.hs  Tarefa5_2022li1g022.hs
src/doc/html/: Main.html  Tarefa1_2022li1g022.html  Tarefa2_2022li1g022.html  Tarefa3_2022li1g022.html  Tarefa4_2022li1g022.html  Tarefa5_2022li1g022.html  doc-index.html  index.html
tests/: Spec.hs  Tarefa1_2022li1g022_Spec.hs  Tarefa2_2022li1g022_Spec.hs  Tarefa3_2022li1g022_Spec.hs  Tarefa4_2022li1g022_Spec.hs  Tarefa5_2022li1g022_Spec.hs
